--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="Main.css">
 </head>
 <body>
-    <div class="wrapper">
-        <h1 class="content">
-            HanselBot V1!
+    <div class="intro">
+        <h1>
+            HANSEL BOT v1
         </h1>
-        <p>Bot for your Evillious server!</p>
-        <a href="https://discord.com/oauth2/authorize?client_id=1233047343973142599&permissions=28030500399174&scope=bot">
-            <button>Add to Server!</button>
+        <p>
+            Bot for every Evillious server!
+        </p>
+    </div>
+    <div class="button">
+        <a href="https://discord.com/oauth2/authorize?client_id=1233047343973142599&permissions=590980453885974&scope=bot">
+                <button>ADD TO SERVER</button>
         </a>
     </div>
 </body>
